[gd_scene load_steps=16 format=2]

[ext_resource path="res://map/objects/town.gd" type="Script" id=1]
[ext_resource path="res://map/objects/bottom.gd" type="Script" id=2]
[ext_resource path="res://map/images/town_bottom.png" type="Texture" id=3]
[ext_resource path="res://map/objects/middle.gd" type="Script" id=4]
[ext_resource path="res://map/images/town_middle.png" type="Texture" id=5]
[ext_resource path="res://map/objects/top.gd" type="Script" id=6]
[ext_resource path="res://map/images/town_top.png" type="Texture" id=7]
[ext_resource path="res://map/objects/door.gd" type="Script" id=8]
[ext_resource path="res://map/images/town_door.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 256.0

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 10.0
height = 20.0

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = PoolVector2Array( 0, -10, 8.66025, 5, -8.66025, 5 )

[sub_resource type="CapsuleShape2D" id=5]

custom_solver_bias = 0.0
radius = 10.0
height = 33.0

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="town" type="StaticBody2D"]

input_pickable = true
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Pickable" ]

[node name="bottom" type="StaticBody2D" parent="." index="0" groups=[
"town",
]]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="bottom" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom" index="1"]

position = Vector2( -8.49998, -4.49998 )
scale = Vector2( 14.3462, 0.968085 )
shape = SubResource( 1 )

[node name="middle" type="StaticBody2D" parent="." index="1" groups=[
"middle",
"town",
]]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="middle" index="0"]

texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="middle" index="1"]

position = Vector2( -6.5, -0.500001 )
scale = Vector2( 8.03846, 6.80769 )
shape = SubResource( 2 )

[node name="window1" type="TextureButton" parent="middle" index="2" groups=[
"window",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -78.0
margin_top = -34.0
margin_right = -38.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Rect", "Textures" ]

[node name="window2" type="TextureButton" parent="middle" index="3" groups=[
"window",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.0
margin_top = -27.0
margin_right = 15.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null

[node name="window3" type="TextureButton" parent="middle" index="4" groups=[
"window",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_top = -36.0
margin_right = 62.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null

[node name="top" type="StaticBody2D" parent="." index="2" groups=[
"town",
]]

editor/display_folded = true
input_pickable = true
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 6 )
_sections_unfolded = [ "Pickable" ]

[node name="Sprite" type="Sprite" parent="top" index="0"]

texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="top" index="1"]

position = Vector2( -6.49999, 86.5 )
scale = Vector2( 9.96154, 3.15217 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="top" index="2"]

position = Vector2( -7.67297, -12.9524 )
scale = Vector2( 9.89061, 10.619 )
shape = SubResource( 4 )

[node name="door" type="StaticBody2D" parent="." index="3" groups=[
"town",
]]

editor/display_folded = true
input_pickable = true
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 8 )
_sections_unfolded = [ "Pickable" ]

[node name="Sprite" type="Sprite" parent="door" index="0"]

z_index = 3
texture = ExtResource( 9 )
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door" index="1"]

position = Vector2( 4.99999, 37 )
scale = Vector2( 6.76923, 1.05085 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="door" index="2"]

position = Vector2( 4.125, -17.125 )
scale = Vector2( 2.29808, 2.74038 )
shape = SubResource( 6 )

[connection signal="pressed" from="middle/window1" to="middle" method="_on_window1_pressed"]

[connection signal="pressed" from="middle/window2" to="middle" method="_on_window2_pressed"]

[connection signal="pressed" from="middle/window3" to="middle" method="_on_window3_pressed"]


